<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- GENERAL -->
    <string name="app_name">Flym</string>
    <string name="about_flym">About Flym</string>
    <string name="welcome_title">Welcome to Flym. Would you like to add one feed?</string>
    <string name="welcome_title_with_opml_import">Would you like to import previous Flym feeds?</string>
    <string name="cannot_find_feeds">No feeds has been found</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_edit_feed">Edit feed</string>
    <string name="menu_reorder">Reorder feeds</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_enable_full_text_retrieval">Enable full text retrieval</string>
    <string name="menu_disable_full_text_retrieval">Disable full text retrieval</string>
    <string name="menu_all_read">Mark all as read</string>
    <string name="flym_feeds">Flym feeds</string>
    <string name="error">Error</string>
    <string name="network_error">The network is not set up</string>
    <string name="drawer_explanation">Welcome!\n\nLong press on the feeds to see options ▼</string>
    <string name="drawer_fetch_error_explanation">Some of your feeds did not refresh correctly ▼</string>
    <string name="LoginScreen">Login Screen</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="AttempsLeft">Attempts Left:</string>
    <string name="Login">Log In</string>

    <!-- FEEDS -->
    <string name="feeds">Feeds</string>
    <string name="menu_add_group">Add group</string>
    <string name="menu_import">Import from OPML</string>
    <string name="menu_export">Export to OPML</string>
    <string name="storage_request_explanation">To be able to import or export the feeds from or to a file, you must allow the application to access to the storage memory.</string>
    <string name="error_feed_export">The export has failed. Make sure you have a writable SD-card mounted.</string>
    <string name="feed_search">Feed search</string>
    <string name="feed_search_hint">Enter feed link or keyword</string>
    <string name="feed_added">Feed added to the list</string>
    <string name="question_delete_feed">Do you really want to delete this feed?</string>
    <string name="question_delete_group">Do you really want to delete this group and all of its feeds?</string>
    <string name="add_group_title">Select group name</string>
    <string name="message_exported_to">Exported into %s.</string>
    <string name="to_group_title">Feed move action</string>
    <string name="to_group_message">You can either put this feed into or above this group. What do you want to do?</string>
    <string name="to_group_above">Above the group</string>
    <string name="to_group_into">Into the group</string>
    <string name="google_news_top_stories">Top Stories</string>
    <string name="google_news_world">World</string>
    <string name="google_news_business">Business</string>
    <string name="google_news_science_technology">Science &amp; Technology</string>
    <string name="google_news_entertainment">Entertainment</string>
    <string name="google_news_sports">Sports</string>
    <string name="google_news_health">Health</string>
    <string name="feed_name">Feed name</string>
    <string name="feed_link">Feed link</string>

    <!-- ENTRIES -->
    <string name="all_entries">All entries</string>
    <string name="menu_star">Star</string>
    <string name="menu_unstar">Unstar</string>
    <string name="menu_share">Share</string>
    <string name="menu_mark_as_unread">Mark as unread</string>
    <string name="get_full_text">Retrieve the full text</string>
    <string name="original_text">Show original text</string>
    <string name="open_in_browser">See in browser</string>
    <string name="cant_open_link">No application found for this link</string>
    <string name="unreads">Unreads</string>
    <string name="all">All</string>
    <string name="favorites">Favorites</string>
    <string name="no_entries">No items\nPlease pull down to refresh</string>
    <string name="undo">Undo</string>
    <string name="marked_as_read">Marked as read</string>
    <string name="marked_as_unread">Marked as unread</string>

    <!-- SETTINGS -->
    <string name="settings_category_refresh">Automated refresh</string>
    <string name="settings_refresh_enabled">Enable automatic refresh</string>
    <string name="settings_refresh_enabled_description">Enable the automatic refresh of feeds</string>
    <string name="settings_refresh_interval">Refresh interval</string>
    <string name="settings_category_content_presentation">Content presentation</string>
    <string name="settings_keep_time">Time that the entries will be kept</string>
    <string name="settings_display_images">Display images</string>
    <string name="settings_display_images_description">Display images in entries</string>
    <string name="settings_preload_image_mode">Preload images</string>
    <string name="settings_font_size">Text size</string>
    <string name="settings_refresh_wifi_only">Refresh only over Wi-Fi</string>
    <string name="settings_refresh_wifi_only_description">Automatic refresh will only be done if Wi-Fi connection is available</string>
    <string name="settings_category_filter">Filters</string>
    <string name="settings_remove_duplicates_description_title">Remove duplicates</string>
    <string name="settings_remove_duplicates_description">Checks the title of newly downloaded item and skips when one with the same title is already present</string>
    <string name="filter">Remove items containing keywords (coma-separated list)</string>
    <string name="settings_dark_theme">Enable dark theme</string>
    <string name="settings_dark_theme_description">Change the interface colors for better comfort in low light environements</string>

    <plurals name="number_of_new_entries">
        <item quantity="one">One new entry</item>
        <item quantity="other">%d new entries</item>
    </plurals>

    <string-array name="settings_intervals">
        <item>5 minutes</item>
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>2 hours</item>
        <item>6 hours</item>
        <item>12 hours</item>
        <item>1 day</item>
    </string-array>
    <string-array name="settings_keep_times">
        <item>1 day</item>
        <item>2 days</item>
        <item>4 days</item>
        <item>1 week</item>
        <item>2 weeks</item>
        <item>1 month</item>
        <item>2 months</item>
        <item>3 months</item>
        <item>Forever</item>
    </string-array>
    <string-array name="settings_font_sizes">
        <item>-2</item>
        <item>-1</item>
        <item>Standard</item>
        <item>+1</item>
        <item>+2</item>
        <item>+3</item>
    </string-array>
    <string-array name="settings_preload_image_modes">
        <item>Never</item>
        <item>Only over Wi-Fi</item>
        <item>Always</item>
    </string-array>
</resources>
